Added basic wrapping logic